--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -15,6 +15,11 @@ spring:
   h2:
     console:
       enabled: true
+  
+  # Cache Configuration
+  cache:
+    type: simple
+    cache-names: expenses
 
 # Swagger/OpenAPI Configuration
 springdoc:
@@ -26,3 +31,14 @@ springdoc:
     operations-sorter: method
     tags-sorter: alpha
     try-it-out-enabled: true
+
+# Rate Limiting Configuration
+rate-limit:
+  # Authentication endpoints (register/login) - stricter limits
+  auth-requests-per-minute: 5
+  # Expense creation endpoint
+  expense-creation-requests-per-minute: 10
+  # General API endpoints
+  general-requests-per-minute: 30
+  # Time window in minutes
+  time-window-minutes: 1
